优化鄂尔多斯项目

--- a/鄂尔多斯项目/customTabBar-master/app.json
+++ b/鄂尔多斯项目/customTabBar-master/app.json
@@ -36,7 +36,8 @@
     "pages/assess/assess",
     "pages/workdetail/workdetail",
     "pages/stay/stay",
-    "pages/home/index"
+    "pages/home/index",
+    "pages/information/information"
   ],
   "tabBar": {
     "custom": true,
@@ -88,5 +89,6 @@
       "provider": "wxea14f39af1d4d74a"
     }
   },
+  "lazyCodeLoading": "requiredComponents",
   "sitemapLocation": "sitemap.json"
 }
